# nwd-rust

./: .gitattributes  Cargo.toml  README.md  dirs.txt
docs/: DESIGN.md  ISSUES.md  MANUAL.md  README.md  TODO.md  gitignore
languages/arduino/: init.cpp  init.h  make.patch  specifics.sh
languages/arduino-raw/: init.c  make.patch  specifics.sh
languages/asm/: init.S  make.patch  specifics.sh
languages/c/: init.c  specifics.sh
languages/c+asm/: init.S  init.c  make.patch  specifics.sh
languages/cpp/: init.cpp  make.patch  specifics.sh
languages/f90/: init.f90  make.patch  specifics.sh
languages/latex/: Makefile  customlib.sty  specifics.sh  template-article.tex  template-blank.tex  template-notes.tex
languages/pico/: CMakeLists.txt  init.c  specifics.sh
languages/rust/: Cargo.toml  init.rs  specifics.sh
licenses/: MIT
src/: main.rs
